--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@strapi/plugin-users-permissions": "4.13.1",
     "@strapi/provider-email-sendgrid": "^4.13.6",
     "@strapi/strapi": "4.13.1",
-    "better-sqlite3": "8.5.0"
+    "better-sqlite3": "8.5.0",
+    "uuid": "^9.0.1"
   },
   "author": {
     "name": "A Strapi developer"
