--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@strapi/provider-email-sendgrid": "^4.13.6",
     "@strapi/strapi": "4.13.1",
     "better-sqlite3": "8.5.0",
+    "strapi-provider-email-postmark": "^4.0.1",
     "uuid": "^9.0.1"
   },
   "author": {
